reports/0041_epi_cert_mutation_full.out/mutants.out/log/crates__tracewake-core__src__epistemics__projection.rs_line_626_col_9.log

*** crates/tracewake-core/src/epistemics/projection.rs:626:9: replace EpistemicProjection::compute_checksum -> EpistemicProjectionChecksumReport with Default::default()

*** mutation diff:
--- crates/tracewake-core/src/epistemics/projection.rs
+++ replace EpistemicProjection::compute_checksum -> EpistemicProjectionChecksumReport with Default::default()
@@ -618,119 +618,17 @@
             .flat_map(|ids| ids.iter())
             .filter_map(|observation_id| self.observations_by_id.get(observation_id))
             .map(debug_observation_entry)
             .collect();
         DebugObservationsView::new(actor_id, observations)
     }
 
     pub fn compute_checksum(&self) -> EpistemicProjectionChecksumReport {
-        let mut lines = vec![
-            format!("projection_version={}", self.projection_version.as_str()),
-            format!(
-                "projection_schema_version={}",
-                self.projection_schema_version.as_str()
-            ),
-            format!("content_manifest_id={}", self.content_manifest_id.as_str()),
-            format!(
-                "event_range={}:{}:{}",
-                self.event_range
-                    .first_event_id
-                    .as_ref()
-                    .map(|id| id.as_str())
-                    .unwrap_or(""),
-                self.event_range
-                    .last_event_id
-                    .as_ref()
-                    .map(|id| id.as_str())
-                    .unwrap_or(""),
-                self.event_range.event_count
-            ),
-        ];
-
-        for (id, observation) in &self.observations_by_id {
-            lines.push(format!(
-                "observation|id={}|actor={}|channel={}|tick={}|place={}|confidence={}|source={:?}",
-                id.as_str(),
-                observation.observer_actor_id().as_str(),
-                observation.channel().stable_id(),
-                observation.observed_tick().value(),
-                observation.observer_place_id().as_str(),
-                observation.confidence().serialize_canonical(),
-                observation.source(),
-            ));
-        }
-
-        for (id, belief) in &self.beliefs_by_id {
-            lines.push(format!(
-                "belief|id={}|holder={}|stance={}|confidence={}|proposition={}|source={:?}|stale_after={}|observations={}|contradictions={}",
-                id.as_str(),
-                holder_key(belief.holder()),
-                belief.stance().stable_id(),
-                belief.confidence().serialize_canonical(),
-                belief.proposition().serialize_canonical(),
-                belief.source(),
-                belief
-                    .stale_after_tick()
-                    .map(|tick| tick.value().to_string())
-                    .unwrap_or_default(),
-                observation_id_set_key(belief.observation_ids()),
-                contradiction_id_set_key(belief.contradiction_ids()),
-            ));
-        }
-
-        for (id, contradiction) in &self.contradictions_by_id {
-            lines.push(format!(
-                "contradiction|id={}|holder={}|kind={}|belief={}|observation={}|expected={}|observed={}|tick={}",
-                id.as_str(),
-                contradiction.holder_actor_id().as_str(),
-                contradiction.kind().stable_id(),
-                contradiction.prior_expectation_belief_id().as_str(),
-                contradiction.contradicting_observation_id().as_str(),
-                contradiction.expected_proposition().serialize_canonical(),
-                contradiction.observed_proposition().serialize_canonical(),
-                contradiction.detected_tick().value(),
-            ));
-        }
-
-        for (actor_id, entries) in &self.notebook_entries_by_actor {
-            for entry in entries {
-                lines.push(format!(
-                    "notebook|actor={}|belief={}|observation={}|summary={}",
-                    actor_id.as_str(),
-                    entry
-                        .source_belief_id
-                        .as_ref()
-                        .map(|id| id.as_str())
-                        .unwrap_or(""),
-                    entry
-                        .source_observation_id
-                        .as_ref()
-                        .map(|id| id.as_str())
-                        .unwrap_or(""),
-                    entry.summary
-                ));
-            }
-        }
-
-        for (actor_id, records) in &self.actor_known_records_by_actor {
-            for record in records {
-                lines.push(format!(
-                    "actor_known|actor={}|record={}",
-                    actor_id.as_str(),
-                    record.serialize_canonical()
-                ));
-            }
-        }
-
-        let checksum = EpistemicProjectionChecksum::from_canonical_lines(&lines);
-        EpistemicProjectionChecksumReport {
-            checksum,
-            canonical_input: lines,
-        }
+        Default::default() /* ~ changed by cargo-mutants ~ */
     }
 }
 
 impl ActorKnownProjectionSource {
     pub fn source_label(&self) -> &'static str {
         match self {
             Self::RoleAssignmentNotice => "evented_role_assignment_notice",
             Self::StartingBelief => "evented_starting_belief",


*** /home/joeloverbeck/.rustup/toolchains/1.93.0-x86_64-unknown-linux-gnu/bin/cargo test --no-run --verbose --workspace --locked
       Dirty tracewake-core v0.1.0 (/tmp/cargo-mutants-tracewake-KPbovd.tmp/crates/tracewake-core): couldn't read metadata for file `target/debug/deps/libtracewake_core-95b4b25dfac705df.rlib`
   Compiling tracewake-core v0.1.0 (/tmp/cargo-mutants-tracewake-KPbovd.tmp/crates/tracewake-core)
     Running `/home/joeloverbeck/.rustup/toolchains/1.93.0-x86_64-unknown-linux-gnu/bin/rustc --crate-name tracewake_core --edition=2021 crates/tracewake-core/src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --crate-type lib --emit=dep-info,metadata,link -C embed-bitcode=no -C debuginfo=2 --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=e33c3a3bd335069b -C extra-filename=-95b4b25dfac705df --out-dir /tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps -C incremental=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/incremental -L dependency=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps`
     Running `/home/joeloverbeck/.rustup/toolchains/1.93.0-x86_64-unknown-linux-gnu/bin/rustc --crate-name tracewake_core --edition=2021 crates/tracewake-core/src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --emit=dep-info,link -C embed-bitcode=no -C debuginfo=2 --test --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=2fc44e5b19aef358 -C extra-filename=-b96b951b3689326d --out-dir /tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps -C incremental=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/incremental -L dependency=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps`
error[E0277]: the trait bound `EpistemicProjectionChecksumReport: Default` is not satisfied
   --> crates/tracewake-core/src/epistemics/projection.rs:626:9
    |
626 |         Default::default() /* ~ changed by cargo-mutants ~ */
    |         ^^^^^^^^^^^^^^^^^^ unsatisfied trait bound
    |
help: the trait `Default` is not implemented for `EpistemicProjectionChecksumReport`
   --> crates/tracewake-core/src/epistemics/projection.rs:308:1
    |
308 | pub struct EpistemicProjectionChecksumReport {
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

For more information about this error, try `rustc --explain E0277`.
error: could not compile `tracewake-core` (lib) due to 1 previous error

Caused by:
  process didn't exit successfully: `/home/joeloverbeck/.rustup/toolchains/1.93.0-x86_64-unknown-linux-gnu/bin/rustc --crate-name tracewake_core --edition=2021 crates/tracewake-core/src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --crate-type lib --emit=dep-info,metadata,link -C embed-bitcode=no -C debuginfo=2 --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=e33c3a3bd335069b -C extra-filename=-95b4b25dfac705df --out-dir /tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps -C incremental=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/incremental -L dependency=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps` (exit status: 1)
warning: build failed, waiting for other jobs to finish...
error: could not compile `tracewake-core` (lib test) due to 1 previous error

Caused by:
  process didn't exit successfully: `/home/joeloverbeck/.rustup/toolchains/1.93.0-x86_64-unknown-linux-gnu/bin/rustc --crate-name tracewake_core --edition=2021 crates/tracewake-core/src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --emit=dep-info,link -C embed-bitcode=no -C debuginfo=2 --test --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=2fc44e5b19aef358 -C extra-filename=-b96b951b3689326d --out-dir /tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps -C incremental=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/incremental -L dependency=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps` (exit status: 1)

*** result: Failure(101)
